--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,10 @@ sidebar {
       border-left: 3px solid #00bc8c; }
       @media only screen and (min-width : 320px) {
   .container, .container-fluid {
-    padding-left: 100px; // just an example
+    padding-left: 100px; 
   }
+}
+.home{
+  padding: 50px;
 }
 
